@@ -28,7 +28,7 @@
 
   <stage name="core">
 
-    <component><field ref="title" required="yes" input_lookup_url="{$config{perl_url}}/users/lookup/title_duplicates" /></component>
+    <component><field ref="title" required="yes" input_lookup_url="{$config{perl_url}}/users/lookup/title_duplicates" input_lookup_params="eprintid={eprintid}" /></component>
     <component><field ref="abstract"/></component>
 
     <epc:if test="type = 'monograph'">
