@@ -6072,3 +6072,8 @@ PACKAGE: 2.2.99.2
 2006-12-13 tmb
  * Added redirect_to_me_url subs to fix Public::RequestCopy and Request::Respond screens 
  * Removed "click here" from request copy email
+
+2006-12-13 tmb
+ * Added eprintid param to title dup lookup so that the current record isn't suggested as
+    a duplicate
+ * Wrapping for warning/error messages in Import screen
